<resources>
    <string name="app_name">星愿艺考Bata版</string>

    <string name="login_aty_close_tv">关闭</string>
    <string name="login_aty_register_tv">注册</string>
    <string name="login_phont_hint_tv">输入手机号</string>
    <string name="login_phont_pass_hint_tv">输入密码</string>
    <string name="register_flag_tv">输入手机号，快速注册</string>
    <string name="register_code_tv">输入验证码</string>
    <string name="register_getcode_tv">获取验证码</string>
    <string name="login_findpass_tv">忘记密码？</string>
    <string name="login_loing_tv">登录</string>

    <string name="weixin_login_tv">微信登录</string>
    <string name="qq_login_tv">QQ登录</string>
    <string name="sina_login_tv">微博登录</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
