<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@color/white"
    android:layout_height="match_parent">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_marginTop="@dimen/ts_26"
        android:layout_height="@dimen/ts_44">
        <TextView
            android:id="@+id/login_aty_close_tv"
            android:layout_width="@dimen/ts_32"
            android:layout_height="wrap_content"
            style="@style/login_top_tv"
            android:layout_alignParentLeft="true"
            android:layout_marginLeft="@dimen/ts_12"
            android:text="@string/login_aty_close_tv"/>


        <TextView
            android:id="@+id/login_aty_register_tv"
            android:layout_width="@dimen/ts_32"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            style="@style/login_top_tv"
            android:layout_marginRight="@dimen/ts_12"
            android:text="@string/login_aty_register_tv"/>
    </RelativeLayout>


    <com.jiyun.asmodeus.xyxy.view.ui.MyScrollView
        android:layout_width="match_parent"
        android:scrollbars="none"
        android:layout_height="match_parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:gravity="center_horizontal"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_marginTop="@dimen/ts_116"
                android:orientation="vertical"
                android:layout_height="wrap_content">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:gravity="center_horizontal"
                    android:layout_height="wrap_content">

                    <TextView
                        android:layout_width="@dimen/ts_32"
                        android:textSize="@dimen/ts_16"
                        android:text="+86"
                        android:visibility="gone"
                        android:textColor="@color/login_phone_flag_c"
                        android:layout_height="wrap_content" />

                    <TextView
                        android:layout_width="@dimen/ts_1"
                        android:background="@color/d8_c"
                        android:layout_marginLeft="@dimen/ts_10"
                        android:visibility="gone"
                        android:layout_height="@dimen/ts_16" />
                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/login_aty_phone_et"
                            android:layout_width="match_parent"
                            style="@style/login_logout_input"
                            android:maxLength="11"
                            android:hint="@string/login_phont_hint_tv"
                            android:layout_height="wrap_content" />

                        <ImageView
                            android:id="@+id/login_aty_phone_et_clear"
                            android:layout_width="@dimen/ts_22"
                            android:visibility="visible"
                            android:src="@mipmap/input_close"
                            android:layout_alignParentRight="true"
                            android:layout_height="@dimen/ts_22" />

                    </RelativeLayout>

                </LinearLayout>

                <TextView
                    android:layout_width="@dimen/ts_280"
                    style="@style/login_line_style"
                    android:layout_marginTop="@dimen/ts_20"
                    android:layout_height="@dimen/ts_1" />

                <RelativeLayout
                    android:layout_marginTop="@dimen/ts_30"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <EditText
                        android:id="@+id/login_aty_pass_et"
                        android:layout_width="match_parent"
                        style="@style/login_logout_input"
                        android:password="true"
                        android:maxLength="16"
                        android:hint="@string/login_phont_pass_hint_tv"
                        android:layout_height="wrap_content" />

                    <ImageView
                        android:id="@+id/login_aty_pass_et_clear"
                        android:layout_width="@dimen/ts_22"
                        android:visibility="visible"
                        android:src="@mipmap/input_close"
                        android:layout_alignParentRight="true"
                        android:layout_height="@dimen/ts_22" />
                </RelativeLayout>


                <TextView
                    android:layout_width="@dimen/ts_280"
                    style="@style/login_line_style"
                    android:layout_marginTop="@dimen/ts_20"
                    android:layout_height="@dimen/ts_1" />


                <TextView
                    android:id="@+id/login_aty_findpass_tv"
                    android:layout_width="wrap_content"
                    android:layout_marginTop="@dimen/ts_10"
                    android:text="@string/login_findpass_tv"
                    android:textColor="@color/login_phone_tx_c"
                    android:layout_height="wrap_content" />

                <Button
                    android:id="@+id/login_aty_loginbtn"
                    android:layout_width="@dimen/ts_280"
                    android:text="@string/login_loing_tv"
                    android:textSize="@dimen/ts_16"
                    android:textColor="@color/white"
                    android:layout_marginTop="@dimen/ts_68dp"
                    android:background="@drawable/login_btn_enable_bg"
                    android:layout_height="@dimen/ts_48" />


                <LinearLayout
                    android:layout_marginTop="@dimen/ts_90"
                    android:layout_width="match_parent"
                    android:orientation="horizontal"
                    android:layout_height="wrap_content">

                    <LinearLayout
                        android:id="@+id/login_aty_weixin_btn"
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_weight="2"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="@dimen/ts_56"
                            android:layout_height="@dimen/ts_56"
                            android:src="@mipmap/weixin"/>
                        <TextView
                            android:layout_width="wrap_content"
                            style="@style/liblogin_tv_style"
                            android:text="@string/weixin_login_tv"
                            android:layout_height="wrap_content" />

                    </LinearLayout>


                    <LinearLayout
                        android:id="@+id/login_aty_qq_btn"
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:gravity="center_horizontal"
                        android:layout_weight="2"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="@dimen/ts_56"
                            android:layout_height="@dimen/ts_56"
                            android:src="@mipmap/qq"/>
                        <TextView
                            android:layout_width="wrap_content"
                            style="@style/liblogin_tv_style"
                            android:text="@string/qq_login_tv"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                    <LinearLayout
                        android:id="@+id/login_aty_weibo_btn"
                        android:layout_width="0dp"
                        android:orientation="vertical"
                        android:layout_weight="2"
                        android:gravity="center_horizontal"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="@dimen/ts_56"
                            android:layout_height="@dimen/ts_56"
                            android:src="@mipmap/weibo"/>
                        <TextView
                            android:layout_width="wrap_content"
                            style="@style/liblogin_tv_style"
                            android:text="@string/sina_login_tv"
                            android:layout_height="wrap_content" />

                    </LinearLayout>

                </LinearLayout>
            </LinearLayout>

        </RelativeLayout>

    </com.jiyun.asmodeus.xyxy.view.ui.MyScrollView>


</LinearLayout>